샘플 코드 테스트

--- a/mcdonaldapp/templates/mcdonaldapp/basket.html
+++ b/mcdonaldapp/templates/mcdonaldapp/basket.html
@@ -76,6 +76,12 @@
       장바구니
     </div>
 
+    <div>
+        <div>{{ menu_name }}</div>
+        <div>{{ menu_price }}</div>
+        <div>{{ num }}</div>
+    </div>
+
     <div class="table">
       <table id = 'orderedmenu'>
         <th  class = "fs-2 t_menu">메뉴명</th>
