solved css error

--- a/mcdonaldapp/templates/mcdonaldapp/payment.html
+++ b/mcdonaldapp/templates/mcdonaldapp/payment.html
@@ -39,8 +39,8 @@
             <a href="{% url 'mcdonaldapp:insert_cash' %}?packing={{ packing }}">
               <img class="payment" src="{% static 'img/cash.png' %}" />
               <div class="pay_name">
-                모바일 상품권<br>
-                (MOBILE GIFT CARD)
+                현금<br>
+                (CASH)
               </div>
             </a>
           </div>
